Fixed display for default picker. Changed icon for encoding settings window to match the encoding settings button on the main window.

--- a/VidCoder/View/WatcherWindow.xaml
+++ b/VidCoder/View/WatcherWindow.xaml
@@ -136,7 +136,7 @@
 												Margin="10 0 0 0"
 												Source="/Icons/EncodingSettings.png" />
 											<TextBlock
-												Margin="2 0 0 0"
+												Margin="3 0 0 0"
 												VerticalAlignment="Center"
 												Foreground="{DynamicResource DescriptiveTextBrush}"
 												Text="{Binding WatchedFolder.Preset}" />
@@ -147,10 +147,10 @@
 												Margin="10 0 0 0"
 												Source="/Icons/Picker.png" />
 											<TextBlock
-												Margin="2 0 0 0"
+												Margin="3 0 0 0"
 												VerticalAlignment="Center"
 												Foreground="{DynamicResource DescriptiveTextBrush}"
-												Text="{Binding WatchedFolder.Picker}" />
+												Text="{Binding PickerName}" />
 											<Image
 												Grid.Column="2"
 												Width="16"
