--- a/VidCoder/View/EncodingWindow.xaml
+++ b/VidCoder/View/EncodingWindow.xaml
@@ -60,9 +60,8 @@
 			</Grid.RowDefinitions>
 			<controls:ToolWindowTitleBar
 				Title="{Binding WindowTitle}"
-				Icon="/Icons/Options.png"
-				IsActive="{Binding IsActive,
-				                   RelativeSource={RelativeSource AncestorType=Window}}" />
+				Icon="/Icons/EncodingSettings.png"
+				IsActive="{Binding IsActive, RelativeSource={RelativeSource AncestorType=Window}}" />
 			<Grid Grid.Row="1">
 				<Grid.ColumnDefinitions>
 					<ColumnDefinition
@@ -76,8 +75,7 @@
 				<ScrollViewer
 					Grid.Column="0"
 					Margin="0 0 4 0"
-					Visibility="{Binding PresetPanelOpen,
-					                     Converter={StaticResource VisibilityConverter}}">
+					Visibility="{Binding PresetPanelOpen, Converter={StaticResource VisibilityConverter}}">
 					<controls:PresetTreeViewContainer
 						EnableFolderActions="True"
 						Focusable="True"
@@ -93,8 +91,7 @@
 					Background="{DynamicResource SplitterBrush}"
 					Canvas.ZIndex="4"
 					ShowsPreview="True"
-					Visibility="{Binding PresetPanelOpen,
-					                     Converter={StaticResource VisibilityConverter}}" />
+					Visibility="{Binding PresetPanelOpen, Converter={StaticResource VisibilityConverter}}" />
 
 				<Grid
 					Name="mainGrid"
@@ -117,8 +114,7 @@
 								AutomationProperties.Name="{x:Static res:EncodingRes.ClosePresetsListToolTip}"
 								Command="{Binding TogglePresetPanel}"
 								ToolTip="{x:Static res:EncodingRes.ClosePresetsListToolTip}"
-								Visibility="{Binding PresetPanelOpen,
-								                     Converter={StaticResource VisibilityConverter}}">
+								Visibility="{Binding PresetPanelOpen, Converter={StaticResource VisibilityConverter}}">
 								<Path Data="M 8,0 L 9,1 L 2,8 L 9,15 L 8,16 L 0,8 Z" Fill="{DynamicResource WindowTextBrush}" />
 							</Button>
 							<Button
@@ -128,8 +124,7 @@
 								AutomationProperties.Name="{x:Static res:EncodingRes.OpenPresetsListToolTip}"
 								Command="{Binding TogglePresetPanel}"
 								ToolTip="{x:Static res:EncodingRes.OpenPresetsListToolTip}"
-								Visibility="{Binding PresetPanelOpen,
-								                     Converter={StaticResource InverseVisibilityConverter}}">
+								Visibility="{Binding PresetPanelOpen, Converter={StaticResource InverseVisibilityConverter}}">
 								<Path Data="M 1,0 L 9,8 L 1,16 L 0,15 L 7,8 L 0,1 Z" Fill="{DynamicResource WindowTextBrush}" />
 							</Button>
 							<Button
@@ -139,8 +134,7 @@
 								Padding="5 0"
 								AutomationProperties.Name="{x:Static res:EncodingRes.Save}"
 								Command="{Binding Save}"
-								Visibility="{Binding SaveRenameButtonsVisible,
-								                     Converter={StaticResource VisibilityConverter}}">
+								Visibility="{Binding SaveRenameButtonsVisible, Converter={StaticResource VisibilityConverter}}">
 								<StackPanel Orientation="Horizontal">
 									<Image
 										Width="16"
@@ -161,24 +155,21 @@
 								Padding="5 0"
 								Command="{Binding Rename}"
 								Content="{x:Static res:EncodingRes.Rename}"
-								Visibility="{Binding SaveRenameButtonsVisible,
-								                     Converter={StaticResource VisibilityConverter}}" />
+								Visibility="{Binding SaveRenameButtonsVisible, Converter={StaticResource VisibilityConverter}}" />
 							<Button
 								Height="24"
 								MinWidth="70"
 								Padding="5 0"
 								Command="{Binding ProcessingService.ApplyCurrentPresetToQueue}"
 								Content="{x:Static res:EncodingRes.ApplyToQueueButton}"
-								Visibility="{Binding ProcessingService.ShowApplyToQueueButton,
-								                     Converter={StaticResource VisibilityConverter}}" />
+								Visibility="{Binding ProcessingService.ShowApplyToQueueButton, Converter={StaticResource VisibilityConverter}}" />
 							<Button
 								Height="24"
 								MinWidth="70"
 								Padding="5 0"
 								AutomationProperties.Name="{x:Static res:EncodingRes.Revert}"
 								Command="{Binding DeletePreset}"
-								Visibility="{Binding PresetsService.SelectedPreset.Preset.IsModified,
-								                     Converter={StaticResource VisibilityConverter}}">
+								Visibility="{Binding PresetsService.SelectedPreset.Preset.IsModified, Converter={StaticResource VisibilityConverter}}">
 								<StackPanel Orientation="Horizontal">
 									<Image
 										Width="16"
@@ -193,8 +184,7 @@
 								Padding="5 0"
 								AutomationProperties.Name="{x:Static res:CommonRes.Delete}"
 								Command="{Binding DeletePreset}"
-								Visibility="{Binding DeleteButtonVisible,
-								                     Converter={StaticResource VisibilityConverter}}">
+								Visibility="{Binding DeleteButtonVisible, Converter={StaticResource VisibilityConverter}}">
 								<StackPanel Orientation="Horizontal">
 									<Grid Background="Transparent">
 										<Rectangle
@@ -222,12 +212,9 @@
 								MinWidth="70"
 								Padding="5 0"
 								AutomationProperties.Name="{x:Static res:CommonRes.PreviewLabel}"
-								Command="{Binding OpenPreviewWindow,
-								                  Source={StaticResource WindowXamlHelper}}"
+								Command="{Binding OpenPreviewWindow, Source={StaticResource WindowXamlHelper}}"
 								IsEnabled="{Binding HasSourceData}"
-								Visibility="{Binding PreviewWindowOpen,
-								                     Source={StaticResource WindowXamlHelper},
-								                     Converter={StaticResource InverseVisibilityConverter}}">
+								Visibility="{Binding PreviewWindowOpen, Source={StaticResource WindowXamlHelper}, Converter={StaticResource InverseVisibilityConverter}}">
 								<StackPanel Orientation="Horizontal">
 									<Image
 										Width="16"
