--- a/VidCoder/View/WatcherWindow.xaml
+++ b/VidCoder/View/WatcherWindow.xaml
@@ -2,9 +2,10 @@
 	x:Class="VidCoder.View.WatcherWindow"
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	xmlns:commonModel="clr-namespace:VidCoderCommon.Model;assembly=VidCoderCommon"
 	xmlns:controls="clr-namespace:VidCoder.Controls"
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-	xmlns:local="clr-namespace:VidCoder.View"
+	xmlns:local="clr-namespace:VidCoder"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 	xmlns:res="clr-namespace:VidCoder.Resources"
 	xmlns:viewModel="clr-namespace:VidCoder.ViewModel"
@@ -19,6 +20,9 @@
 	<WindowChrome.WindowChrome>
 		<WindowChrome CaptionHeight="30" ResizeBorderThickness="{x:Static SystemParameters.WindowResizeBorderThickness}" />
 	</WindowChrome.WindowChrome>
+	<Window.Resources>
+		<local:EnumDisplayer x:Key="StatusConverter" Type="{x:Type commonModel:WatchedFileStatus}" />
+	</Window.Resources>
 	<Border Style="{StaticResource WindowMainPanelStyle}">
 		<Grid>
 			<Grid.RowDefinitions>
@@ -202,7 +206,7 @@
 								<GridViewColumn Header="{x:Static res:WatcherRes.StatusColumnHeader}">
 									<GridViewColumn.CellTemplate>
 										<DataTemplate>
-											<TextBlock Style="{DynamicResource ListViewTextBlockBaseStyle}" Text="{Binding WatchedFile.Status}" />
+											<TextBlock Style="{DynamicResource ListViewTextBlockBaseStyle}" Text="{Binding WatchedFile.Status, Converter={StaticResource StatusConverter}}" />
 										</DataTemplate>
 									</GridViewColumn.CellTemplate>
 								</GridViewColumn>
