--- a/VidCoder/View/WatcherWindow.xaml
+++ b/VidCoder/View/WatcherWindow.xaml
@@ -243,8 +243,37 @@
 							<Setter Property="ContextMenu">
 								<Setter.Value>
 									<ContextMenu>
-										<MenuItem Header="{x:Static res:WatcherRes.RetryMenuItem}" />
-										<MenuItem Header="{x:Static res:WatcherRes.SkipMenuItem}" />
+										<MenuItem
+											Command="{Binding Cancel}"
+											Header="{x:Static res:WatcherRes.CancelMenuItem}"
+											Visibility="{Binding CanCancel, Converter={StaticResource VisibilityConverter}}">
+											<MenuItem.Icon>
+												<Image
+													Width="16"
+													Height="16"
+													Source="/Icons/Remove.png" />
+											</MenuItem.Icon>
+										</MenuItem>
+										<MenuItem
+											Command="{Binding Retry}"
+											Header="{x:Static res:WatcherRes.RetryMenuItem}"
+											Visibility="{Binding CanRetry, Converter={StaticResource VisibilityConverter}}">
+											<MenuItem.Icon>
+												<Image
+													Width="16"
+													Height="16"
+													Source="/Icons/Reload.png" />
+											</MenuItem.Icon>
+										</MenuItem>
+										<Separator />
+										<MenuItem Command="{Binding OpenContainingFolder}" Header="{x:Static res:WatcherRes.OpenContainingFolderMenuItem}">
+											<MenuItem.Icon>
+												<Image
+													Width="16"
+													Height="16"
+													Source="/Icons/win7foldericon.png" />
+											</MenuItem.Icon>
+										</MenuItem>
 									</ContextMenu>
 								</Setter.Value>
 							</Setter>
