--- a/VidCoder/View/WatcherWindow.xaml
+++ b/VidCoder/View/WatcherWindow.xaml
@@ -70,7 +70,8 @@
 						Visibility="{Binding WatcherEnabled, Converter={StaticResource VisibilityConverter}}" />
 					<Button
 						MinHeight="30"
-						Margin="12 0 0 0"
+						Margin="6 0 0 0"
+						Padding="6 0"
 						AutomationProperties.Name="{x:Static res:WatcherRes.AddFolderToWatch}"
 						Command="{Binding AddWatchedFolder}"
 						Style="{StaticResource BorderlessButtonStyle}"
